# vulnscan-action

./: .gitignore  AGENT.md  README.md  graph.py  models.py  observability.py  pyproject.toml
.github/workflows/: vulnscan.yml
ci/: scan.sh
docs/: go-finetune-research.md
examples/: caller.yml
examples/legacy-gitea/: .gitea-workflow.vulnscan.yml  .github-workflow.vulnscan.yml
prompts/: auditor.md
tests/: test_exec.py  test_findings.py  test_integration.py  test_observability.py  test_sarif.py  test_specialist.py
tools/: __init__.py  exec.py  findings.py  fs.py  sarif.py  second_opinion.py  specialist.py
